@@ -1,5 +1,6 @@
 Changes for 1.8.4rc3
 
+ - [ZBX-2787] it is no longer possible add invalid time for IT services, like 1:111 or 23:67 or 4:66 and so on (KB)
  - [ZBXNEXT-557] added TL compatibility information when executed AIX agent with --version flag (Sasha)
  - [ZBX-3195] fixed slow sync of trends data while server shutdown (Sasha)
  - [ZBXNEXT-549] added trigger function strlen() (asaveljevs,Vedmak)
